--- a/index.qmd
+++ b/index.qmd
@@ -4,6 +4,13 @@ about:
   template: broadside
   image: media/photo.jpg
   image-shape: rectangle
+  links:
+    - text: LinkedIn
+      href: https://www.linkedin.com/in/zuzannawasiluk/
+    - text: GitHub
+      href: https://github.com/zuzannawasiluk
+    - text: Email
+      href: mailto:wasilu1@stolaf.edu
 format:
   html: 
     theme: cerulean
